# ClientServerTestTask

./: CMakeLists.txt  README.md  TASK.md
client/: CMakeLists.txt
client/src/: data_generator.cpp  data_generator.h  device_client.cpp  device_client.h  main.cpp
server/: CMakeLists.txt
server/src/: client_config.h  client_handler.cpp  client_handler.h  data_models.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.h  server_worker.cpp  server_worker.h
